renamed texts in dasboard page

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -110,12 +110,12 @@
 										<i class="fa fa-long-arrow-right"></i>
 									<% end %>
 								</li>
-								<li>
+								<!-- <li>
 									POGR-Compare
-									<%= link_to pogrs_path, { :class => "btn btn-primary load float-right"} do %>
+									<%#= link_to pogrs_path, { :class => "btn btn-primary load float-right"} do %>
 										<i class="fa fa-long-arrow-right"></i>
-									<% end %>
-								</li>
+									<%# end %>
+								</li> -->
 							</ul>
 						</div>						
 					</div>
@@ -146,7 +146,7 @@
 									<% end %>
 								</li>
 								<li>
-									Excess Stock
+									Non-Moving Stock
 									<%= link_to sendmails_excess_stock_report_path, { :class => "btn btn-primary load float-right"} do %>
 										<i class="fa fa-long-arrow-right"></i>
 									<% end %>
