--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -97,10 +97,10 @@
         <%=link_to "Send Email", sendmails_sendmails_claims_rate_change_path,class: "list-group-item load"%>
       </div>
       
-     <!--  <a href="#menu8" id="collapse8" class="list-group-item collapsed" data-toggle="collapse" data-parent="#sidebar" aria-expanded="false"><i class="fa fa-exclamation-circle"></i>   <span class="hidden-sm-down">Issues</span> <i class="fa fa-angle-right" aria-hidden="true"></i></a>
-      <div class="collapse" id="menu8">
-       <%#=link_to "Issues Audit Report", issues_index_path,class: "list-group-item load"%>
-      </div> -->
+      <a href="#menu11" id="collapse11" class="list-group-item collapsed" data-toggle="collapse" data-parent="#sidebar" aria-expanded="false"><i class="fa fa-exclamation-circle"></i>   <span class="hidden-sm-down">Other Claims</span> <i class="fa fa-angle-right" aria-hidden="true"></i></a>
+      <div class="collapse" id="menu11">
+       <%=link_to "Other Claims", sendmails_non_findable_claims_path,class: "list-group-item load"%>
+      </div>
 
       <a href="#menu9" id="collapse9" class="list-group-item collapsed" data-toggle="collapse" data-parent="#sidebar" aria-expanded="false"><i class="fa fa-stack-overflow"></i>   <span class="hidden-sm-down">Non-Moving Stock</span> <i class="fa fa-angle-right" aria-hidden="true"></i></a>
       <div class="collapse" id="menu9">
