--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -186,6 +186,14 @@ function myFunction() {
 }
 </script>
 
+<script type="text/javascript">
+  $('.datepicker').datepicker({
+    changeMonth: true,
+    changeYear: true,
+    dateFormat: "d-M-yy",
+    yearRange: "c-20:c+20"
+  });
+</script>
 
   </body>
 </html>
