--- a/app/views/pages/reports.html.erb
+++ b/app/views/pages/reports.html.erb
@@ -22,13 +22,13 @@
               <div class="col-md-3">
                 <label>From Date</label>
                 <br>
-                <input name="from_date" type="text" id="dt1" class="form-control date" value="<%=params["from_date"]%>" placeholder="dd-mm-yy">
+                <input name="from_date" type="text" id="dt1" class="form-control datepicker" value="<%=params["from_date"]%>" placeholder="dd-mm-yy">
               </div>
               
               <div class="col-md-3">
                 <label>To Date</label>
                 <br>                  
-                <input name="to_date" type="text" id="dt2" class="form-control date1" value="<%=params["to_date"]%>" placeholder="dd-mm-yy">
+                <input name="to_date" type="text" id="dt2" class="form-control datepicker" value="<%=params["to_date"]%>" placeholder="dd-mm-yy">
               </div>              
                      
               
@@ -136,7 +136,7 @@
 
 
 
-
+<!-- 
  <script type="text/javascript">
   $(document).ready(function () {
 
@@ -165,7 +165,7 @@
 
 
 </script>
-
+ -->
 
 <script type="text/javascript">
 $( document ).ready(function() {
