--- a/app/views/sendmails/purchase_order_report.html.erb
+++ b/app/views/sendmails/purchase_order_report.html.erb
@@ -21,13 +21,13 @@
               <div class="col-md-3">
                 <label>From Date</label>
                 <br>
-                <input name="from_date" type="text" id="dt1" class="form-control date" value="<%=params["from_date"]%>" placeholder="dd-mm-yy">
+                <input name="from_date" type="text" id="dt1" class="form-control datepicker" value="<%=params["from_date"]%>" placeholder="dd-mm-yy">
               </div>
               
               <div class="col-md-3">
                 <label>To Date</label>
                 <br>                  
-                <input name="to_date" type="text" id="dt2" class="form-control date1" value="<%=params["to_date"]%>" placeholder="dd-mm-yy">
+                <input name="to_date" type="text" id="dt2" class="form-control datepicker" value="<%=params["to_date"]%>" placeholder="dd-mm-yy">
               </div>              
               <div class="col-md-3">
                 <label>Supplier</label>
@@ -157,7 +157,7 @@
 </script>
 
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 $( document ).ready(function() {
     var d = new Date();
     var curr_date = d.getDate();
@@ -168,7 +168,7 @@ $( document ).ready(function() {
    $("#dt2").attr("placeholder",date);
 });
 </script>
-
+ -->
 
 
 
