--- a/app/views/appointmentsold/pending_appointment.html.erb
+++ b/app/views/appointmentsold/pending_appointment.html.erb
@@ -25,13 +25,13 @@
                 <div class="col-md-3">
                   <label>From Date</label>
                   <br>
-                  <input name="from_date" type="text" id="dt1" class="form-control" value="<%=@from_date%>" placeholder="dd-M-yy">
+                  <input name="from_date" type="text" id="dt1" class="form-control datepicker" value="<%=@from_date%>" placeholder="dd-M-yy">
 
                 </div>
                 <div class="col-md-3">
                   <label>To Date</label>
                   <br>                  
-                  <input name="to_date" type="text" id="dt2" class="form-control" value="<%=@to_date%>" placeholder="dd-M-yy">
+                  <input name="to_date" type="text" id="dt2" class="form-control datepicker" value="<%=@to_date%>" placeholder="dd-M-yy">
                 </div>
                 <div class="col-md-4">
                   <label>Contact Type</label>
@@ -91,7 +91,7 @@
 
 
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
   $(document).ready(function () {
 
         $("#dt1").datepicker({
@@ -113,7 +113,7 @@
             dateFormat: "dd-M-yy"
         });
     });
-</script>
+</script> -->
 <script type="text/javascript">
   $(document).ready(function(){ 
     $("#dt1").each(function(ev)
