--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -17,12 +17,12 @@
               <div class="col-md-3">
                 <label>From Date</label>
                   <br>
-                <input name="from_date" type="text" id="dt1" class="form-control date" value="<%=@from_date%>" placeholder="dd-M-yy">
+                <input name="from_date" type="text" id="dt1" class="form-control datepicker" value="<%=@from_date%>" placeholder="dd-M-yy">
               </div>
               <div class="col-md-3">
                 <label>To Date</label>
                 <br>                  
-                <input name="to_date" type="text" id="dt2" class="form-control date1" value="<%=@to_date%>" placeholder="dd-M-yy">
+                <input name="to_date" type="text" id="dt2" class="form-control datepicker" value="<%=@to_date%>" placeholder="dd-M-yy">
               </div>
               <div class="col-md-4">
                 <label>Claims Status</label>
@@ -52,7 +52,7 @@
             <table id="example">
                <thead>
                 <tr>
-                  <th>Description</th>
+                  <th>Title</th>
                   <th>Divison</th>
                   <th class="text-center">Cut-off Date </th>                  
                   <th>Resolved By</th>
@@ -84,7 +84,18 @@
                   
                     <td><%=i["contact"]["name"]%></td>
                     <td class="text-center"><%=i["created_at"].to_date.strftime('%d-%m-%Y') unless i["created_at"].nil?%></td>
-                    <td><span style="width: 200px;white-space: nowrap;text-overflow: ellipsis;overflow: hidden;" title="<%=i["notes"]%>"><h4 class="btn-link"><%= i["notes"]%></h4></span></td>
+                    <td>
+                      <%#= i["notes"]%>
+                      <div>
+                        <% if i["notes"].length > 50 %>
+                        <% notes = i["notes"] %>
+                          <%= truncate(notes, length: 50) %>
+                          <%= link_to_function '...Read more', "$(this).parent().html('#{escape_javascript notes}')" %>
+                        <% else %>
+                          <%= notes %>
+                        <% end %>
+                      </div>
+                    </td>
 
                     <td class="td_issue_status">
                       <%= select_tag "status[]", options_for_select([['Open'],['Closed'],['Re-open']],:selected=>i["status"]),  class: "form-control", include_blank: "Select"%>
@@ -166,7 +177,7 @@
  -->
  
       
-<script type="text/javascript">
+<!-- <script type="text/javascript">
   $(document).ready(function () {
 
         $("#dt1").datepicker({
@@ -193,7 +204,7 @@
     });
 
 
-</script>
+</script> -->
 <script type="text/javascript">
   $(document).ready(function(){ 
     $("#dt1").each(function(ev)
