--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -186,6 +186,12 @@
 										<i class="fa fa-long-arrow-right"></i>
 									<% end %>
 								</li>
+								<li>
+									Other Claims
+									<%= link_to sendmails_rate_change_claims_path, { :class => "btn btn-primary load float-right"} do %>
+										<i class="fa fa-long-arrow-right"></i>
+									<% end %>
+								</li>
 							</ul>
 						</div>						
 					</div>
@@ -274,7 +280,7 @@ chart.render();
       		<div class="col-md-12">
       			<div class="card">
       				<div class="card-body">
-		      			<h3>Adjusted Claims For Current Month</h3>
+		      			<h3>Setteld Claims</h3>
 		      			<h4>Count:&nbsp;<span><%=@dashboards["adjustment_count"]%></span></h4>
 		      			<h4>Amount:&nbsp;<span>&#8377;&nbsp;
 		      			<%= "#{@dashboards["adjustment_amount"].to_f.round().to_s.gsub(/(\d+?)(?=(\d\d)+(\d)(?!\d))(\.\d+)?/, "\\1,")}"%></span></h4>
@@ -351,11 +357,11 @@ chart.render();
 		                 gridLines: { drawBorder: true, display: false }
 		            }],        	
 		            yAxes: [{
-		                ticks: {
-		                	stepSize: 20000000,
-							max: <%=@dashboards["amount"].max + 50000000%>,		                	
-		                    beginAtZero:true
-		                },
+		     //            ticks: {
+		     //            	stepSize: 100000,
+							// max: <%=@dashboards["amount"].max%>,		                	
+		     //                beginAtZero:true
+		     //            },
 		                gridLines: { drawBorder: true, display: false }
 		            }]
 		        }
