--- a/app/views/sendmails/excess_stock_report.html.erb
+++ b/app/views/sendmails/excess_stock_report.html.erb
@@ -22,13 +22,13 @@
                   <div class="col-md-2">
                       <label>From Date</label>
                       <br>
-                      <input name="from_date" type="text" id="dt1" class="form-control date" value="<%=@from_date%>" placeholder="dd-M-yy">
+                      <input name="from_date" type="text" id="dt1" class="form-control datepicker" value="<%=@from_date%>" placeholder="dd-M-yy">
                   </div>
                 
                   <div class="col-md-2">
                   <label>To Date</label>
                   <br>                  
-                  <input name="to_date" type="text" id="dt2" class="form-control date1" value="<%=@to_date%>" placeholder="dd-M-yy">
+                  <input name="to_date" type="text" id="dt2" class="form-control datepicker" value="<%=@to_date%>" placeholder="dd-M-yy">
                   </div>
                   <div class="col-md-3">
                   <label>Supplier</label>
@@ -208,7 +208,7 @@ $(".overlay").hide();
 </script>
 
 
- <script type="text/javascript">
+<!--  <script type="text/javascript">
   $(document).ready(function () {
 
         $("#dt1").datepicker({
@@ -235,7 +235,7 @@ $(".overlay").hide();
     });
 
 
-</script>
+</script> -->
 
 <script type="text/javascript">
   $(document).ready(function(){
