--- a/app/views/sendmails/expiry_damage_claims.html.erb
+++ b/app/views/sendmails/expiry_damage_claims.html.erb
@@ -18,11 +18,11 @@
 
                 <div class="col-md-3">
                    <label>From Date</label><br>
-                    <input name="from_date" type="text" id="dt1" class="form-control date" value="<%=@from_date%>" placeholder="dd-M-yy">
+                    <input name="from_date" type="text" id="dt1" class="form-control datepicker" value="<%=@from_date%>" placeholder="dd-M-yy">
                 </div>
                 <div class="col-md-3">
                     <label>To Date</label><br>
-                     <input name="to_date" type="text" id="dt2" class="form-control date1" value="<%=@to_date%>" placeholder="dd-M-yy">
+                     <input name="to_date" type="text" id="dt2" class="form-control datepicker" value="<%=@to_date%>" placeholder="dd-M-yy">
                 </div>
 
                 <div class="col-md-3">
@@ -209,7 +209,7 @@ $( document ).ready(function() {
     $("#dt2").attr("placeholder",date);
 });
 </script>
-
+<!-- 
  <script type="text/javascript">
   $(document).ready(function () {
 
@@ -237,4 +237,4 @@ $( document ).ready(function() {
     });
 
 
-</script>
+</script> -->
