--- a/app/views/sendmails/sendmails_claims_discount.html.erb
+++ b/app/views/sendmails/sendmails_claims_discount.html.erb
@@ -12,13 +12,13 @@
                 <div class="col-md-3">
                   <label>From Date</label>
                   <br>
-                  <input name="from_date" type="text" id="dt1" class="form-control date" value="<%=@from_date%>" placeholder="dd-M-yy">
+                  <input name="from_date" type="text" id="dt1" class="form-control datepicker" value="<%=@from_date%>" placeholder="dd-M-yy">
                 </div>
                 
                 <div class="col-md-3">
                   <label>To Date</label>
                   <br>                  
-                  <input name="to_date" type="text" id="dt2" class="form-control date1" value="<%=@to_date%>" placeholder="dd-M-yy">
+                  <input name="to_date" type="text" id="dt2" class="form-control datepicker" value="<%=@to_date%>" placeholder="dd-M-yy">
                 </div>
                 <div class="col-md-3">
                   <label>Supplier</label>
@@ -113,7 +113,7 @@ $( document ).ready(function() {
 </script>
 
 
- <script type="text/javascript">
+<!--  <script type="text/javascript">
   $(document).ready(function () {
 
         $("#dt1").datepicker({
@@ -140,7 +140,7 @@ $( document ).ready(function() {
     });
 
 
-</script>
+</script> -->
 
 
   <script type="text/javascript">
