--- a/app/views/sendmails/sendmails_claims_purchase_return.html.erb
+++ b/app/views/sendmails/sendmails_claims_purchase_return.html.erb
@@ -13,13 +13,13 @@
                 <div class="col-md-3">
                   <label>From Date</label>
                   <br>
-                  <input name="from_date" type="text" id="dt1" class="form-control date" value="<%=@from_date%>" placeholder="dd-M-yy">
+                  <input name="from_date" type="text" id="dt1" class="form-control datepicker" value="<%=@from_date%>" placeholder="dd-M-yy">
                 </div>
                 
                 <div class="col-md-3">
                   <label>To Date</label>
                   <br>                  
-                  <input name="to_date" type="text" id="dt2" class="form-control date1" value="<%=@to_date%>" placeholder="dd-M-yy">
+                  <input name="to_date" type="text" id="dt2" class="form-control datepicker" value="<%=@to_date%>" placeholder="dd-M-yy">
                 </div>
                 <div class="col-md-3">
                   <label>Supplier</label>
@@ -110,7 +110,7 @@ $( document ).ready(function() {
 });
 </script>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
   $(document).ready(function () {
 
         $("#dt1").datepicker({
@@ -137,7 +137,7 @@ $( document ).ready(function() {
     });
 
 
-</script>
+</script> -->
 
   <script type="text/javascript">
   $(document).ready(function() {
