--- a/app/views/sendmails/settled_claims_report.html.erb
+++ b/app/views/sendmails/settled_claims_report.html.erb
@@ -24,13 +24,13 @@
                 <div class="col-md-3">
                   <label>From Date</label>
                   <br>
-                  <input name="from_date" type="text" id="dt1" class="form-control date" value="<%=params["from_date"]%>" placeholder="dd-mm-yy">
+                  <input name="from_date" type="text" id="dt1" class="form-control datepicker" value="<%=params["from_date"]%>" placeholder="dd-mm-yy">
                 </div>
                 
                 <div class="col-md-3">
                   <label>To Date</label>
                   <br>                  
-                  <input name="to_date" type="text" id="dt2" class="form-control date1" value="<%=params["to_date"]%>" placeholder="dd-mm-yy">
+                  <input name="to_date" type="text" id="dt2" class="form-control datepicker" value="<%=params["to_date"]%>" placeholder="dd-mm-yy">
                 </div>
                 <div class="col-md-3">
                  <label></label>
@@ -220,7 +220,7 @@
  -->
 
 
- <script type="text/javascript">
+<!--  <script type="text/javascript">
   $(document).ready(function () {
 
         $("#dt1").datepicker({
@@ -247,7 +247,7 @@
     });
 
 
-</script>
+</script> -->
 
 <script type="text/javascript">
   $(document).ready(function(){
