--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -188,7 +188,7 @@
 								</li>
 								<li>
 									Other Claims
-									<%= link_to sendmails_rate_change_claims_path, { :class => "btn btn-primary load float-right"} do %>
+									<%= link_to sendmails_non_findable_claims_path, { :class => "btn btn-primary load float-right"} do %>
 										<i class="fa fa-long-arrow-right"></i>
 									<% end %>
 								</li>
@@ -269,7 +269,7 @@ chart.render();
       		<div class="col-md-12">
       			<div class="card">
       				<div class="card-body">
-		      			<h3>Pending Claims</h3>
+		      			<h3>Pending Claims (Last 12 months)</h3>
 		      			<h4>Count:&nbsp;<span><%=@dashboards["claim_count"]%></span></h4>
 		      			<h4>Amount:&nbsp;<span>&#8377;&nbsp;<%="#{@dashboards["claim_amount"].to_f.round().to_s.gsub(/(\d+?)(?=(\d\d)+(\d)(?!\d))(\.\d+)?/, "\\1,")}"%>
 		      				
@@ -280,7 +280,7 @@ chart.render();
       		<div class="col-md-12">
       			<div class="card">
       				<div class="card-body">
-		      			<h3>Setteld Claims</h3>
+		      			<h3>Setteld Claims for current month</h3>
 		      			<h4>Count:&nbsp;<span><%=@dashboards["adjustment_count"]%></span></h4>
 		      			<h4>Amount:&nbsp;<span>&#8377;&nbsp;
 		      			<%= "#{@dashboards["adjustment_amount"].to_f.round().to_s.gsub(/(\d+?)(?=(\d\d)+(\d)(?!\d))(\.\d+)?/, "\\1,")}"%></span></h4>
@@ -290,7 +290,7 @@ chart.render();
       		<div class="col-md-12">
       			<div class="card">
       				<div class="card-body">
-		      			<h3>Today's PO</h3>
+		      			<h3>Today's Purchase order</h3>
 		      			<h4>Total POs:&nbsp;<span><%=@dashboards["POs"]%></span></h4>
 		      			<h4>Total Quantity:&nbsp;<span><%=@dashboards["total_quantity"]%></span></h4>
 		      			<h4>Total Products:&nbsp;<span><%=@dashboards["total_products"]%></span></h4>
