--- a/app/views/sendmails/expiry_claim_preview.html.erb
+++ b/app/views/sendmails/expiry_claim_preview.html.erb
@@ -40,6 +40,7 @@
                    <tr>
                    <th>Product Code</th>
                    <th>Product</th>
+                   <th>Batch</th>
                    <th>Qty</th>
                    <th>Adjust Qty</th>
                    <th>Free Qty</th>
@@ -64,6 +65,7 @@
 
                       <td><%= i["product_code"] %></td> 
                       <td class="text-left"><%= i["product"]["product_name"] %></td>
+                      <td class="text-left"><%= i["batch_desc"] %></td>
                       <td class="text-right"><%= i["quantity"] %></td> 
                       <td class="text-right"><%= j["adjust_quantity"] %></td>
                       <td class="text-right"><%= i["free_quantity"] %></td>
@@ -71,8 +73,8 @@
                       <td class="input-lable"><input type="text" value="<%= i["mrp"] %>" style="width: 70px;" readonly></td>
                       <td class="input-lable"><input type="text" value="<%= i["gst"] %>" style="width: 70px;"  readonly></td>
                       <td class="text-right"><%= i["claim_amount"].to_f.round(2) %></td> 
-                      <td class="text-right"><%= i["settled_amount"].to_f.round(2) %></td>
-                      <td class="text-right"><%= (i["claim_amount"].to_f-i["settled_amount"].to_f).round(2) %></td>
+                      <td class="text-right"><%= i["ws_settle_amount"].to_f.round(2) %></td>
+                      <td class="text-right"><%= (i["claim_amount"].to_f-i["ws_settle_amount"].to_f).round(2) %></td>
                       <td class="text-right"><%= j["credit_amount"] %></td>
                       <td class="text-right"><%= j["credit_note_num"] %></td>
                       <td class="text-center"><%= j["credit_date"].to_date.strftime('%d-%m-%Y') if j["credit_date"].present? %></td>
@@ -91,6 +93,7 @@
                       
                       <td><%= i["product_code"] %></td> 
                       <td class="text-left"><%= i["product"]["product_name"] %></td>
+                      <td class="text-left"><%= i["batch_desc"] %></td>
                       <td class="text-right"><%= i["quantity"] %></td> 
                       <td class="text-right"><%= 0 %></td>
                       <td class="text-right"><%= i["free_quantity"] %></td>
@@ -98,8 +101,8 @@
                       <td class="input-lable"><input type="text" value="<%= i["mrp"] %>" style="width: 70px;" readonly></td>
                       <td class="input-lable"><input type="text" value="<%= i["gst"] %>" style="width: 70px;"  readonly></td>
                       <td class="text-right"><%= i["claim_amount"].to_f.round(2) %></td> 
-                      <td class="text-right"><%= i["settled_amount"].to_f.round(2) %></td>
-                      <td class="text-right"><%= (i["claim_amount"].to_f-i["settled_amount"].to_f).round(2) %></td>
+                      <td class="text-right"><%= i["ws_settle_amount"].to_f.round(2) %></td>
+                      <td class="text-right"><%= (i["claim_amount"].to_f-i["ws_settle_amount"].to_f).round(2) %></td>
                       <td class="text-right"><%= 0 %></td>
                       <td class="text-right"><%= 0 %></td>
                       <td class="text-center"><%= 0 %></td>
