--- a/app/views/sendmails/rate_claim_preview.html.erb
+++ b/app/views/sendmails/rate_claim_preview.html.erb
@@ -27,7 +27,8 @@
                   <thead class="tbl-header">
                    <tr>
                    <th>Product Code</th>
-                   <th class="text-center">Product Name</th>
+                   <th class="text-center">Product</th>
+                   <th class="text-center">Batch</th>
               <!--      <th>Quantity</th>
                    <th>Adjust Quantity</th>
                    <th>Free Quantity</th>
@@ -52,6 +53,7 @@
                       <tr>
                                     <td><%=i["product_code"]%></td> 
                                     <td class="text-left">MIS</td>
+                                    <td class="text-left"><%=i["batch"]%></td>
                                     <td class="text-right"><%=i["rate"].to_f.round(2)%></td>
                                     <td class="text-right"><%=i["mrp"].to_f.round(2)%></td>
                                     <td class="text-right"><%=i["gst"].to_f.round(2)%></td>
@@ -71,6 +73,7 @@
                     <tr>
                     <td><%=i["product_code"]%></td> 
                     <td class="text-left">MIS</td>
+                    <td class="text-left"><%=i["batch"]%></td>
                     <td class="text-right"><%=i["rate"].to_f.round(2)%></td>
                     <td class="text-right"><%=i["mrp"].to_f.round(2)%></td>
                     <td class="text-right"><%=i["gst"].to_f.round(2)%></td>
