--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -100,6 +100,7 @@
       <a href="#menu11" id="collapse11" class="list-group-item collapsed" data-toggle="collapse" data-parent="#sidebar" aria-expanded="false"><i class="fa fa-exclamation-circle"></i>   <span class="hidden-sm-down">Other Claims</span> <i class="fa fa-angle-right" aria-hidden="true"></i></a>
       <div class="collapse" id="menu11">
        <%=link_to "Other Claims", sendmails_non_findable_claims_path,class: "list-group-item load"%>
+       <%=link_to "Send Email", "#", class: "list-group-item load"%>
       </div>
 
       <a href="#menu9" id="collapse9" class="list-group-item collapsed" data-toggle="collapse" data-parent="#sidebar" aria-expanded="false"><i class="fa fa-stack-overflow"></i>   <span class="hidden-sm-down">Non-Moving Stock</span> <i class="fa fa-angle-right" aria-hidden="true"></i></a>
