--- a/app/views/sendmails/non_findable_claims.html.erb
+++ b/app/views/sendmails/non_findable_claims.html.erb
@@ -2,7 +2,7 @@
     <div class="container-fluid user-assign">
         <header class="table-header">
             <ol class="breadcrumb"><li>
-               Non Findable Claims<!--%=link_to "Rate Change Claims", sendmails_rate_change_claims_path,class: "load"%-->
+              Other Claims<!--%=link_to "Rate Change Claims", sendmails_rate_change_claims_path,class: "load"%-->
             </li>
               
             </ol>
