Removed POGR-compare

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -134,7 +134,7 @@
       
       <%= link_to sendmails_path do%><i class="fa fa-paper-plane "></i> <span class="hidden-sm-down load">Send Mail Jobs</span><%end%>
       
-      <%= link_to pogrs_path do %> <i class="fa fa-files-o"></i> <span class="hidden-sm-down load">PO-GR Compare</span><%end%>
+      <!-- <%#= link_to pogrs_path do %> <i class="fa fa-files-o"></i> <span class="hidden-sm-down load">PO-GR Compare</span><%#end%> -->
       </div>
     </nav>
   </div>
