Send PO filter added and title changed

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -65,7 +65,7 @@
        <%=link_to "Settled Claims", sendmails_settled_claims_report_path,class: "list-group-item load"%>
       </div>
 
-      <a href="#menu3" id="collapse3" class="list-group-item collapsed" data-toggle="collapse" data-parent="#sidebar" aria-expanded="false"><i class="fa fa-list-ul"></i>   <span class="hidden-sm-down">PO</span> <i class="fa fa-angle-right" aria-hidden="true"></i></a>
+      <a href="#menu3" id="collapse3" class="list-group-item collapsed" data-toggle="collapse" data-parent="#sidebar" aria-expanded="false"><i class="fa fa-list-ul"></i>   <span class="hidden-sm-down">Purchase Order</span> <i class="fa fa-angle-right" aria-hidden="true"></i></a>
       <div class="collapse" id="menu3">
         <%=link_to "PO Report", sendmails_purchase_order_report_path,class: "list-group-item load"%>
         <%=link_to "Send PO", sendmails_sendmail_purchase_order_page_path,class: "list-group-item load"%>
