--- a/app/views/sendmails/sendmail_purchase_order_page.html.erb
+++ b/app/views/sendmails/sendmail_purchase_order_page.html.erb
@@ -4,9 +4,38 @@
             <ol class="breadcrumb">
               <%= render_breadcrumbs :tag => :li, :separator => "" %>
             </ol>
-            <h3>Send mail - PO
-           </h3>
           </header>
+          <div class="date-search">
+            <%=form_for "filter",:url=>{:controller=>"sendmails",:action=>"sendmail_purchase_order_page"} do |i|%>
+              <div class="row">
+
+                <div class="col-md-3">
+                  <label>Supplier</label>
+                  <br>       
+                  <%= select_tag "supplier_id", options_for_select(@supplier.map { |obj| [obj['supplier_name'], obj['id']] }, selected: params["supplier_id"]), class: "form-control", autofocus: true, prompt: "select" %>
+                </div>
+
+                <div class="col-md-3">
+                  <label>From Date</label>
+                  <br>
+                  <input name="from_date" type="text" id="dt1" class="form-control datepicker" value="<%=params["from_date"]%>" placeholder="dd-mm-yy">
+                </div>
+                
+                <div class="col-md-3">
+                  <label>To Date</label>
+                  <br>                  
+                  <input name="to_date" type="text" id="dt2" class="form-control datepicker" value="<%=params["to_date"]%>" placeholder="dd-mm-yy">
+                </div>              
+                
+                <div class="col-md-2">
+                 <label></label>
+                  <br>
+                    <button class="date_submit btn btn-full btn-primary">Show</button>
+                </div>
+              </div>
+            <%end%>            
+          </div>
+          <h3 class="page-title d-inline-flex">Send mail - PO </h3>
           <%= form_for(@purchase_orders, :url =>{:controller => 'sendmails',:action => 'purchase_order_assign'}) do |f| %>  
           <div class="">
             <table id="example" class="table table-striped">
